# openstack-snitch

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
src/snitch/: compliance_rules.yaml  os_snitch.py
src/snitch/notification/: influxdb.py  notification.py  notificationbase.py  stdout.py
src/snitch/resources/: security_group.py  server.py
src/snitch/utils/: utils.py
src/snitch/violation/: violation.py
tests/: conftest.py  test_security_group_class.py  test_security_grouprule_class.py  test_server_class.py
