[metadata]
name = os-snitch
description = OpenStack compliance rules checker
version = 0.0.1
author = Thobias Salazar Trevisan
author_email = thobias@thobias.org
url = https://github.com/thobiast/openstack-snitch
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8


[options]
python_requires = >=3.6
include_package_data = True
install_requires =
	openstacksdk
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    os-snitch = snitch.os_snitch:main
